--- a/shippable.yml
+++ b/shippable.yml
@@ -1,9 +1,9 @@
 build:
 
-  ci:
+  docker-build:
     - docker build -t quay.io/bobhenkel/docker-gc:shippable-$BRANCH.BUILD_NUMBER .
     
-  post_ci:
+  docker-push:
     - docker push quay.io/bobhenkel/docker-gc:shippable-$BRANCH.BUILD_NUMBER
   
 integrations:
