--- a/shippable.yml
+++ b/shippable.yml
@@ -1,9 +1,9 @@
 build:
 
-  docker-build:
+  docker_build:
     - docker build -t quay.io/bobhenkel/docker-gc:shippable-$BRANCH.BUILD_NUMBER .
     
-  docker-push:
+  docker_push:
     - docker push quay.io/bobhenkel/docker-gc:shippable-$BRANCH.BUILD_NUMBER
   
 integrations:
