--- a/shippable.yml
+++ b/shippable.yml
@@ -1,10 +1,10 @@
 build:
 
   ci:
-    - docker build -t quay.io/bobhenkel/docker-gc:shippable-$BRANCH.BUILD_NUMBER .
+    - docker build -t quay.io/bobhenkel/docker-gc:shippable-$BRANCH.$BUILD_NUMBER .
     
   post_ci:
-    - docker push quay.io/bobhenkel/docker-gc:shippable-$BRANCH.BUILD_NUMBER
+    - docker push quay.io/bobhenkel/docker-gc:shippable-$BRANCH.$BUILD_NUMBER
   
 integrations:
   hub:
