--- a/shippable.yml
+++ b/shippable.yml
@@ -2,6 +2,7 @@ language:   python
 build:
 
   ci:
+    - echo building
     - docker build -t quay.io/bobhenkel/docker-gc:shippable-$BRANCH.$BUILD_NUMBER .
     
   post_ci:
